--- a/loginregreactjsmui1/src/App.css
+++ b/loginregreactjsmui1/src/App.css
@@ -42,6 +42,8 @@
     font-family: "Rubik", sans-serif !important;
     font-optical-sizing: auto;
     font-style: normal;
+    overflow: hidden;
+
   }
   
   ul{
@@ -179,3 +181,5 @@ h1{
   font-weight:600;
   color:#092532;
 }
+
+
