--- a/loginregreactjsmui1/src/Assets/CSS/Pages.css
+++ b/loginregreactjsmui1/src/Assets/CSS/Pages.css
@@ -924,7 +924,11 @@ aside h3 span {
 
 }
 
-.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+.btn-check:checked+.btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check)+.btn:active {
     background-color: lightslategray;
     color: white !important;
 }
@@ -1203,50 +1207,50 @@ aside h3 span {
     padding: 20px 50px 40px;
     box-shadow: 1px 4px 10px 1px #aaa;
     font-family: sans-serif;
-  }
-  
-  #feedback-form * {
-      box-sizing: border-box;
-  }
-  
-  #feedback-form h2{
+}
+
+#feedback-form * {
+    box-sizing: border-box;
+}
+
+#feedback-form h2 {
     text-align: center;
     margin-bottom: 30px;
-  }
-  
-  #feedback-form input {
+}
+
+#feedback-form input {
     margin-bottom: 15px;
-  }
-  
-  #feedback-form input[type=text] {
+}
+
+#feedback-form input[type=text] {
     display: block;
     height: 32px;
     padding: 6px 16px;
     width: 100%;
     border: none;
     background-color: #f3f3f3;
-  }
-  
-  #feedback-form label {
+}
+
+#feedback-form label {
     color: #777;
     font-size: 0.8em;
-  }
-  
-  #feedback-form input[type=checkbox] {
+}
+
+#feedback-form input[type=checkbox] {
     float: left;
-  }
-  
-  #feedback-form input:not(:checked) + #feedback-phone {
+}
+
+#feedback-form input:not(:checked)+#feedback-phone {
     height: 0;
     padding-top: 0;
     padding-bottom: 0;
-  }
-  
-  #feedback-form #feedback-phone {
+}
+
+#feedback-form #feedback-phone {
     transition: .3s;
-  }
-  
-  #feedback-form button[type=submit] {
+}
+
+#feedback-form button[type=submit] {
     display: block;
     margin: 20px auto 0;
     width: 150px;
@@ -1256,10 +1260,150 @@ aside h3 span {
     color: #eee;
     font-weight: 700;
     box-shadow: 1px 4px 10px 1px #aaa;
-    
-    background: #207cca; /* Old browsers */
-    background: -moz-linear-gradient(left, #207cca 0%, #9f58a3 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, #207cca 0%,#9f58a3 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, #207cca 0%,#9f58a3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
-  }
+
+    background: #207cca;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #207cca 0%, #9f58a3 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #207cca 0%, #9f58a3 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #207cca 0%, #9f58a3 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#207cca', endColorstr='#9f58a3', GradientType=1);
+    /* IE6-9 */
+}
+
+
+
+/* User Profile Start here */
+
+.wave-svg-fill {
+    position: relative;
+    width: -webkit-fill-available;
+}
+
+.div-p-relative {
+    box-shadow: 0px 0px 8px gray;
+    padding: 5px;
+}
+
+.div-container-tablet{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.figure-margin .figure{
+    position: absolute;
+    right: 8em;
+    bottom: 1em;
+}
+
+.user_profile_content{
+    display: flex;
+    position: relative;
+    width: 30vh;
+    justify-content: space-evenly;
+    max-width: 100%;
+}
+.span-flex{
+    height: 100px;
+    width: 100px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+.Link_content_profile{
+    display: flex;
+    align-items: center;
+    position: relative;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.figure-margin{
+    width: 13vh;
+}
+
+.Link_content_profile .item{
+    margin: 13px;
+    padding: 5px;
+    border-radius: 50%;
+    border: 1px solid gray;
+
+}
+
+.text-wrapper{
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: #192753;
+
+}
+
+.manager{
+    background-color: rgba(53, 106, 230, 0.14);
+    display: flex;
+    justify-content: center;
+    padding: 3px;
+    border-radius: 7px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #1A3BA5;
+}
+
+.section-2{
+    padding: 35px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+
+
+}
+
+.div-single-grid{
+    padding: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 70vh;
+    align-items: center;
+
+
+
+}
+.link-wrapper a{
+    color: gray;
+    text-decoration: none;
+}
+
+.text-wrapper-2{
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #2D3748;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #5066905e;
+}
+
+.div-text-steel{
+    padding-top: 10px;
+    color: #506690;
+}
+
+.div-w{
+    display: inline-flex;
+    color: #506690;
+
+}
+
+.div-w svg{
+    margin-right: 10px;
+}
+.div-single-grid .list{
+    display: flex;
+    position: relative;
+    width: 70vh;
+    justify-content: space-around;
+    margin-bottom: 20px;
+
+}
