--- a/loginregreactjsmui1/src/Assets/CSS/Pages.css
+++ b/loginregreactjsmui1/src/Assets/CSS/Pages.css
@@ -2443,8 +2443,86 @@ aside h3 span {
 
 .calender_search input{
     position: relative;
-    width: 100vh;
+    width: -webkit-fill-available;
 }
 .calender_main_content{
     padding: 2rem 5rem 2rem 5rem;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.calender_search{
+    display: flex;
+    flex-direction: row;
+}
+
+.filter_section{
+    position: relative;
+    padding: 1rem 5rem;
+    border-right: 1px solid;
+}
+
+.certificate_sold{
+    padding: 15px 0px;
+    border: 1px solid gray;
+    border-radius: 3px;
+    width: 100vh;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.title_content{
+    display: flex;
+    padding: 0px 15px 10px 15px;
+    border-bottom: 1px solid gray;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+.card_main_title h3{
+    font-size: 0.8rem ;
+}
+
+.card_main_title h2{
+    font-size: 1.2rem;
+}
+
+.title_content .img img{
+    width: 10vh;
+    padding: 5px;
+}
+
+.certificate_card .description_content{
+    padding: 15px 20px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid gray;
+}
+
+.certificate_card .description_content p{
+    font-size: 14px;
+    display: flex;
+    width: 30vh;
+    justify-content: space-between;
+    margin-bottom: 10px;
+
+}
+.price_enroll{
+    display: flex;
+    padding: 15px;
+    padding-bottom: 0px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.certificate_price{
+    width: 20vh;
+    display: flex;
+    justify-content: space-around;
+
 }
