--- a/loginregreactjsmui1/src/Assets/CSS/Pages.css
+++ b/loginregreactjsmui1/src/Assets/CSS/Pages.css
@@ -464,7 +464,7 @@ aside h3 span {
 
 }
 
-.Courses_img a{
+.Courses_img a {
     text-decoration: none;
 }
 
@@ -2406,13 +2406,16 @@ aside h3 span {
     align-items: center;
 
 }
+
 .course-items-list ol {
     display: flex;
     align-items: center;
 }
-.page-bottom spacer .text-primary-active{
+
+.page-bottom spacer .text-primary-active {
     color: #1a3ba5;
 }
+
 .course-items-list li {
     padding: 2rem;
     margin-bottom: 2rem;
@@ -2420,13 +2423,13 @@ aside h3 span {
     border: 1px solid #d9e2ef;
 }
 
-.course-items-list li p{
+.course-items-list li p {
     font-size: 14px;
     color: #506690;
 
 }
 
-.course-items-list li button{
+.course-items-list li button {
     margin: 0;
     border-radius: 4px;
     background-color: rgba(53, 106, 230, 0.15);
@@ -2435,17 +2438,32 @@ aside h3 span {
 }
 
 
+
+
+
+
+
+
+
+
+
+
 /* training Calender css */
 
-.calender_heading{
+.calender_heading {
     padding: 5rem 10rem 2rem 10rem;
 }
 
-.calender_search input{
+.calender_search input {
     position: relative;
     width: -webkit-fill-available;
+    border: 1px solid #D9E2EF;
+    padding: 20px;
+    border-radius: 4px;
+    outline: none;
 }
-.calender_main_content{
+
+.calender_main_content {
     padding: 2rem 5rem 2rem 5rem;
     display: flex;
     justify-content: space-around;
@@ -2453,33 +2471,50 @@ aside h3 span {
     justify-content: space-evenly;
 }
 
-.calender_search{
+.calender_search {
     display: flex;
     flex-direction: row;
 }
 
-.filter_section{
-    position: relative;
-    padding: 1rem 5rem;
-    border-right: 1px solid;
+.calender_search button {
+    width: 20vh;
+    border: none;
+    margin-left: 15px;
+    background-color: #754FFE;
+    color: white;
+    border-radius: 5px;
 }
 
-.certificate_sold{
+.filter_section {
+    position: relative;
+    padding: 1rem 5rem 0rem 0rem;
+    border-right: 1px solid #D9E2EF;
+}
+
+.certificate_sold {
     padding: 15px 0px;
     border-radius: 3px;
     width: 100vh;
     display: flex;
     flex-direction: column;
+    height: 90vh;
+    overflow-y: scroll;
+
 
 }
 
-.certificate_sold .certificate_card{
-    border: 1px solid gray;
+.certificate_sold::-webkit-scrollbar {
+    display: none;
+}
+
+.certificate_sold .certificate_card {
+    border: 1px solid #D9E2EF;
+    border-radius: 4px;
     padding: 15px 0px;
     margin-bottom: 5rem;
 }
 
-.title_content{
+.title_content {
     display: flex;
     padding: 0px 15px 10px 15px;
     border-bottom: 1px solid gray;
@@ -2488,20 +2523,26 @@ aside h3 span {
 
 }
 
-.card_main_title h3{
-    font-size: 0.8rem ;
+.card_main_title h3 {
+    font-size: 0.8rem;
+    color: #D8002F;
+    text-transform: uppercase;
+    font-weight: 400;
 }
 
-.card_main_title h2{
+.card_main_title h2 {
     font-size: 1.2rem;
+    color: #356AE6;
+    margin: 0;
+
 }
 
-.title_content .img img{
+.title_content .img img {
     width: 10vh;
     padding: 5px;
 }
 
-.certificate_card .description_content{
+.certificate_card .description_content {
     padding: 15px 20px;
     margin: 0;
     display: flex;
@@ -2509,15 +2550,21 @@ aside h3 span {
     border-bottom: 1px solid gray;
 }
 
-.certificate_card .description_content p{
+.certificate_card .description_content p {
     font-size: 14px;
     display: flex;
-    width: 30vh;
+    width: 35vh;
     justify-content: space-between;
     margin-bottom: 10px;
+    color: #21325A;
 
 }
-.price_enroll{
+
+.certificate_card .description_content span {
+    width: 20vh;
+}
+
+.price_enroll {
     display: flex;
     padding: 15px;
     padding-bottom: 0px;
@@ -2525,9 +2572,73 @@ aside h3 span {
     justify-content: space-between;
 }
 
-.certificate_price{
-    width: 20vh;
+.certificate_price {
+    width: 25vh;
     display: flex;
     justify-content: space-around;
 
+}
+
+
+.heading_content_calender .top_heading {
+    margin-bottom: 25px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #D9E2EF;
+}
+
+.filter_content {
+    width: 35vh;
+}
+
+.filter_content h3 {
+    color: #4545A2;
+    font-size: 15px;
+}
+
+.filter_content p {
+    color: #506690;
+    width: -webkit-fill-available;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.filter_content p span {
+    color: #356AE6;
+}
+
+
+.border_divider {
+    border-top: 1px solid #D9E2EF;
+    padding-top: 15px;
+    margin-top: 20px;
+}
+
+
+.border-bottom {
+    border-bottom: 1px solid #D9E2EF !important;
+}
+
+.live_online {
+    color: #754FFE;
+    font-weight: 500;
+
+}
+
+.mrp_price {
+    color: #506690;
+    text-decoration: line-through;
+}
+
+.price {
+    color: #4545A2;
+}
+
+.price_enroll .enroll_btn button {
+    border: none;
+    padding: 0.8rem 1.5rem;
+    border-radius: 3px;
+    background-image: linear-gradient(128deg, #AC32E4, #E833B0);
+    color: white;
+    font-weight: 400;
 }
